--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,5 +34,5 @@
 }
 
 .main {
-  margin: auto;
+  min-height: 100vh;
 }
